# python-kanka

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  ENTITY_TYPES_UPDATE.md  Makefile  README.md  dev-requirements.txt  full_test_output.txt  integration_test_output.txt  kanka_api_verification_report.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-requirements.txt  test_api_response.py  test_phase3.py
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: CNAME  README.md  api-reference.md  assets-and-images.md  core-concepts.md  debug-mode.md  entities.md  entity-types-reference.md  error-handling.md  gallery.md  getting-started.md  known-limitations.md  last-sync.md  pagination.md  posts.md  rate-limiting.md  search-and-filtering.md
docs/source/: conf.py
examples/: crud_operations.py  error_handling.py  filtering.py  migration.py  posts.py  quickstart.py
kanka/: __init__.py  api.py  client.py  exceptions.py  managers.py  utils.py
kanka/models/: __init__.py  base.py  common.py  entities.py
kanka/objects/: __init__.py  base.py  core.py  stored.py  user.py
scripts/: check.sh  format.sh
src/kanka/: __init__.py  _version.py  client.py  managers.py  types.py
src/kanka/models/: __init__.py  base.py  common.py  entities.py
tests/: __init__.py  integration_example.py  test_client.py  test_exceptions.py  test_managers.py  test_models.py  utils.py
tests/integration/: README.md  TAG_COLOUR_DOCUMENTATION.md  __init__.py  base.py  run_integration_tests.py  run_posts_test.py  setup_test_env.py  test_calendars_integration.py  test_calendars_simple.py  test_characters_integration.py  test_creatures_integration.py  test_entities_api_integration.py  test_entity_assets_integration.py  test_entity_images_integration.py  test_entity_tags_integration.py  test_events_integration.py  test_families_integration.py  test_gallery_integration.py  test_journals_integration.py  test_locations_integration.py  test_mentions_integration.py  test_notes_integration.py  test_organisations_integration.py  test_posts_integration.py  test_quests_integration.py  test_races_integration.py  test_rate_limiting.py  test_search_integration.py  test_tag_colour.py  test_tags_integration.py
