[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-kanka"
version = "2.2.0"
description = "Python client for the Kanka API"
readme = "README.md"
requires-python = "==3.14.0"
license = {text = "MIT"}
authors = [
    {name = "Erv Walter", email = "erv@ewal.net"}
]
keywords = ["kanka", "api", "rpg", "worldbuilding", "tabletop", "ttrpg", "dnd", "pathfinder", "campaign"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "pydantic==2.12.3",
]

[project.urls]
Homepage = "https://github.com/ervwalter/python-kanka"
Documentation = "https://github.com/ervwalter/python-kanka#readme"
Repository = "https://github.com/ervwalter/python-kanka"
Issues = "https://github.com/ervwalter/python-kanka/issues"

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "mypy==1.18.2",
    "black==25.9.0",
    "isort==6.1.0",
    "ruff==0.14.1",
    "types-requests",
    "bump2version==1.0.1",
    "build==1.3.0",
    "twine==6.2.0",
    "pre-commit==4.3.0",
    "python-dotenv==1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kanka"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    # "I",     # isort - disabled, using standalone isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"tests/*" = ["ARG"]       # unused arguments in tests


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.9"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
strict_equality = true
ignore_missing_imports = true
exclude = [
    "site-packages",
    "_pytest",
]

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true
warn_required_dynamic_aliases = true

# Ignore type errors in tests since Pydantic handles conversion
[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["arg-type", "list-item"]

# Ignore unused ignores and attr-defined for advanced model tests
[[tool.mypy.overrides]]
module = "tests.test_models_advanced"
disable_error_code = ["unused-ignore", "attr-defined", "call-arg"]
